--- a/test/02_xhr_mini-axios.html
+++ b/test/02_xhr_mini-axios.html
@@ -1,16 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>使用XHR封装ajax请求函数</title>
 </head>
+
 <body>
   <button onclick="testGet()">发送GET请求</button><br>
   <button onclick="testPost()">发送POST请求</button><br>
   <button onclick="testPut()">发送PUT请求</button><br>
   <button onclick="testDelete()">发送Delete请求</button><br>
+  <script>
+    function axios({
+      url,
+      method = 'GET',
+      params = {},
+      data = {}
+    }) {
+      /* 
+        1.函数的返回值为promise, 成功的结果为response, 异常的结果为error
+        2.能处理多种类型的请求: GET/POST/PUT/DELETE
+        3.函数的参数为一个配置对象
+          {
+            url: '',   // 请求地址
+            method: '',   // 请求方式GET/POST/PUT/DELETE
+            params: {},  // GET/DELETE请求的query参数
+            data: {}, // POST或PUT请求的请求体参数 
+          }
+        4.响应json数据自动解析为js
+      */
 
+      return new Promise((resolve, reject) => {
+        let queryStr = ''
+        Object, keys(params).forEach(key => {
+          queryStr += `&${key}=${params[key]}`
+        });
+        if (queryStr !== '') {
+          queryStr = queryStr.substring(1)
+          url += '?' + queryStr
+        }
+        const xhr = new XMLHttpRequest();
+        xhr.open(method, url, true)
+        xhr.onreadystatechange = function () {
+          if (xhr.readyState !== 4) return
+          if (xhr.status >= 200 && xhr.status < 300) {
+
+            const response = {
+              data: JSON.parse(xhr.response),
+              status: xhr.status
+            }
+          }
+        }
+        if (method === 'GET') {
+          xhr.send();
+        } else {
+          xhr.setRequestHeader('Content-Type', 'application/json;charset=utf-8')
+          xhr.send(JSON.stringify(data))
+        }
+      })
+    }
+  </script>
 </body>
+
 </html>
